// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexPageGuest renders IndexPageGuest component 1`] = `
<DocumentFragment>
  <div
    class="Sidebar IndexGuest Sidebar--Show"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        app.test
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          Summary
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            $262.00 CAD
          </p>
        </div>
      </button>
    </div>
    <div
      class="IndexGuest__Customer"
    >
      <h2
        class="IndexGuest__Title"
      >
        Customer information
      </h2>
      <div
        class="IndexGuest__Login"
      >
        Already have an account? 
        <a>
          Log in
        </a>
      </div>
      <div
        class="stx-field stx-field--with-input"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="email"
            class="stx-input__input-element"
            id="stxField1"
            name="email"
            placeholder="Email address"
            type="email"
          />
        </div>
      </div>
      <div
        class="stx-field stx-checkbox-field__field"
      >
        <div
          class="stx-checkbox-field__div"
        >
          <span
            class="stx-checkbox stx-checkbox-field__checkbox"
          >
            <input
              class="stx-checkbox__input"
              id="stxField2"
              type="checkbox"
            />
            <span
              class="stx-checkbox__mount"
            />
          </span>
          <label
            class="stx-checkbox-field__label"
            for="stxField2"
          >
            Subscribe to our newsletter
          </label>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingAddress"
    >
      <h2
        class="IndexGuest__Title"
      >
        Shipping address
      </h2>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="given-name"
                class="stx-input__input-element"
                id="stxField3"
                name="first_name"
                placeholder="First name"
                type="text"
                value="John"
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="family-name"
                class="stx-input__input-element"
                id="stxField4"
                name="last_name"
                placeholder="Last name"
                type="text"
                value="Doe"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField5"
                name="business_name"
                placeholder="Company (optional)"
                type="text"
                value="Bold Commerce"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="address_line1"
                class="stx-input__input-element"
                id="stxField6"
                name="address_line_1"
                placeholder="Address"
                type="text"
                value="123 Fake Street"
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="address_line2"
                class="stx-input__input-element"
                id="stxField7"
                name="address_line_2"
                placeholder="Apt, suite, etc."
                type="text"
                value="Unit 12"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="address-level2"
                class="stx-input__input-element"
                id="stxField8"
                name="city"
                placeholder="City"
                type="text"
                value="Winnipeg"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup FieldGroup__Country"
        >
          <div
            class="stx-field stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                autocomplete="country"
                class="stx-select__select-element"
                id="stxField9"
                name="country"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a country
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="stx-field stx-field--with-select SelectField Field--Province"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                autocomplete="address-level1"
                class="stx-select__select-element"
                id="stxField10"
                name="province"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a province
                </option>
                <option
                  value="AB"
                >
                  Alberta
                </option>
                <option
                  value="BC"
                >
                  British Columbia
                </option>
                <option
                  value="MB"
                >
                  Manitoba
                </option>
                <option
                  value="NB"
                >
                  New Brunswick
                </option>
                <option
                  value="NL"
                >
                  Newfoundland and Labrador
                </option>
                <option
                  value="NT"
                >
                  Northwest Territories
                </option>
                <option
                  value="NS"
                >
                  Nova Scotia
                </option>
                <option
                  value="NU"
                >
                  Nunavut
                </option>
                <option
                  value="ON"
                >
                  Ontario
                </option>
                <option
                  value="PE"
                >
                  Prince Edward Island
                </option>
                <option
                  value="QC"
                >
                  Quebec
                </option>
                <option
                  value="SK"
                >
                  Saskatchewan
                </option>
                <option
                  value="YT"
                >
                  Yukon Territory
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Postal_Code"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="postal-code"
                class="stx-input__input-element"
                id="stxField11"
                name="postal"
                placeholder="Postal code"
                type="text"
                value="R3A1B3"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="tel"
                class="stx-input__input-element"
                id="stxField12"
                name="phone_number"
                placeholder="Phone (optional)"
                type="tel"
                value="204-123-4567"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingMethod"
    >
      <section
        class="FieldSet FieldSet--ShippingMethod"
      >
        <div
          class="FieldSet__Header"
        >
          <h3
            class="FieldSet__Heading"
          >
            Shipping method
          </h3>
        </div>
        <div
          class="FieldSet__Content"
        >
          <div
            class="RadioButton"
          >
            <div
              class="stx-field stx-field--with-radio-field RadioField"
            >
              <div
                class="stx-radio-field"
              >
                <span
                  class="stx-radio stx-radio-field__radio"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    class="stx-radio__input"
                    id="stxField13"
                    name="shipping-method"
                    role="radio"
                    type="radio"
                    value=""
                  />
                  <span
                    class="stx-radio__box"
                  />
                </span>
                <label
                  class="stx-radio-field__label"
                  for="stxField13"
                >
                  Standard Shipping
                </label>
              </div>
            </div>
            <div
              class="stx-price ShippingMethod__Price stx-price--alight-center"
            >
              <p
                aria-label="Product price"
                class="stx-price__amount"
              >
                $20.00 CAD
              </p>
            </div>
          </div>
          <div
            class="RadioButton"
          >
            <div
              class="stx-field stx-field--with-radio-field RadioField"
            >
              <div
                class="stx-radio-field"
              >
                <span
                  class="stx-radio stx-radio-field__radio"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    class="stx-radio__input"
                    id="stxField14"
                    name="shipping-method"
                    role="radio"
                    type="radio"
                    value=""
                  />
                  <span
                    class="stx-radio__box"
                  />
                </span>
                <label
                  class="stx-radio-field__label"
                  for="stxField14"
                >
                  Expedited Shipping
                </label>
              </div>
            </div>
            <div
              class="stx-price ShippingMethod__Price stx-price--alight-center"
            >
              <p
                aria-label="Product price"
                class="stx-price__amount"
              >
                $40.00 CAD
              </p>
            </div>
          </div>
        </div>
      </section>
    </div>
    <div
      class="IndexGuest__Footer"
    >
      <button
        aria-busy="false"
        aria-disabled="true"
        class="stx-button stx-button--primary stx-button--is-disabled IndexGuest__Billing-btn"
        disabled=""
      >
        <span
          class="stx-button__text"
        >
          Continue to billing
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
      <div
        class="IndexGuest__Footer--login"
      >
        <a>
          Back to log in
        </a>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        All rights reserved app.test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IndexPageGuest renders IndexPageGuest component 2`] = `
<DocumentFragment>
  <div
    class="Sidebar IndexGuest IndexPage--Hide"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        app.test
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          Summary
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            $262.00 CAD
          </p>
        </div>
      </button>
    </div>
    <div
      class="IndexGuest__Customer"
    >
      <h2
        class="IndexGuest__Title"
      >
        Customer information
      </h2>
      <div
        class="IndexGuest__Login"
      >
        Already have an account? 
        <a>
          Log in
        </a>
      </div>
      <div
        class="stx-field stx-field--with-input"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="email"
            class="stx-input__input-element"
            id="stxField15"
            name="email"
            placeholder="Email address"
            type="email"
          />
        </div>
      </div>
      <div
        class="stx-field stx-checkbox-field__field"
      >
        <div
          class="stx-checkbox-field__div"
        >
          <span
            class="stx-checkbox stx-checkbox-field__checkbox"
          >
            <input
              class="stx-checkbox__input"
              id="stxField16"
              type="checkbox"
            />
            <span
              class="stx-checkbox__mount"
            />
          </span>
          <label
            class="stx-checkbox-field__label"
            for="stxField16"
          >
            Subscribe to our newsletter
          </label>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingAddress"
    >
      <h2
        class="IndexGuest__Title"
      >
        Shipping address
      </h2>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="given-name"
                class="stx-input__input-element"
                id="stxField17"
                name="first_name"
                placeholder="First name"
                type="text"
                value="John"
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="family-name"
                class="stx-input__input-element"
                id="stxField18"
                name="last_name"
                placeholder="Last name"
                type="text"
                value="Doe"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField19"
                name="business_name"
                placeholder="Company (optional)"
                type="text"
                value="Bold Commerce"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="address_line1"
                class="stx-input__input-element"
                id="stxField20"
                name="address_line_1"
                placeholder="Address"
                type="text"
                value="123 Fake Street"
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="address_line2"
                class="stx-input__input-element"
                id="stxField21"
                name="address_line_2"
                placeholder="Apt, suite, etc."
                type="text"
                value="Unit 12"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="address-level2"
                class="stx-input__input-element"
                id="stxField22"
                name="city"
                placeholder="City"
                type="text"
                value="Winnipeg"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup FieldGroup__Country"
        >
          <div
            class="stx-field stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                autocomplete="country"
                class="stx-select__select-element"
                id="stxField23"
                name="country"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a country
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="stx-field stx-field--with-select SelectField Field--Province"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                autocomplete="address-level1"
                class="stx-select__select-element"
                id="stxField24"
                name="province"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a province
                </option>
                <option
                  value="AB"
                >
                  Alberta
                </option>
                <option
                  value="BC"
                >
                  British Columbia
                </option>
                <option
                  value="MB"
                >
                  Manitoba
                </option>
                <option
                  value="NB"
                >
                  New Brunswick
                </option>
                <option
                  value="NL"
                >
                  Newfoundland and Labrador
                </option>
                <option
                  value="NT"
                >
                  Northwest Territories
                </option>
                <option
                  value="NS"
                >
                  Nova Scotia
                </option>
                <option
                  value="NU"
                >
                  Nunavut
                </option>
                <option
                  value="ON"
                >
                  Ontario
                </option>
                <option
                  value="PE"
                >
                  Prince Edward Island
                </option>
                <option
                  value="QC"
                >
                  Quebec
                </option>
                <option
                  value="SK"
                >
                  Saskatchewan
                </option>
                <option
                  value="YT"
                >
                  Yukon Territory
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Postal_Code"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="postal-code"
                class="stx-input__input-element"
                id="stxField25"
                name="postal"
                placeholder="Postal code"
                type="text"
                value="R3A1B3"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input"
            >
              <input
                autocomplete="tel"
                class="stx-input__input-element"
                id="stxField26"
                name="phone_number"
                placeholder="Phone (optional)"
                type="tel"
                value="204-123-4567"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="IndexGuest__ShippingMethod"
    >
      <section
        class="FieldSet FieldSet--ShippingMethod"
      >
        <div
          class="FieldSet__Header"
        >
          <h3
            class="FieldSet__Heading"
          >
            Shipping method
          </h3>
        </div>
        <div
          class="FieldSet__Content"
        >
          <p>
            To see shipping options complete filling in your address above
          </p>
        </div>
      </section>
    </div>
    <div
      class="IndexGuest__Footer"
    >
      <button
        aria-busy="false"
        aria-disabled="true"
        class="stx-button stx-button--primary stx-button--is-disabled IndexGuest__Billing-btn"
        disabled=""
      >
        <span
          class="stx-button__text"
        >
          Continue to billing
        </span>
        <span
          class="stx-loading-spinner stx-button__spinner"
        />
      </button>
      <div
        class="IndexGuest__Footer--login"
      >
        <a>
          Back to log in
        </a>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        All rights reserved app.test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
